# Ektome

./: README.md  pyproject.toml
ektome/: exceptions.py  globals.py
ektome/metektome/: cython_funcs.c  cython_funcs.pyx  cythonize.sh  error.py  osteo.py  plotting_modules.py  postprocess.py  postprocess_csv.py  postprocess_sims.py  search3D.py  simulation.py  test.py
ektome/proektome/: binary.py  create_par_file.py  create_sub_file.py  globals.py  parfile.py  simulation.py  spine.py  submit.py  test.py  test2.py
tests/: conftest.py  test_cluster_submission.py  test_config_validation.py  test_ektome.py  test_submission.py
